--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,37 +24,53 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  bloc: ^6.0.2
+  freezed_annotation: ^0.11.0+1
+  get_it: ^4.0.4
+  injectable: ^1.0.4
+  flushbar: ^1.10.4
+  auto_route: ^0.6.7
+  kt_dart: ^0.7.0+1
+  json_annotation: ^3.0.1
+  rxdart: ^0.24.1
+  dartz: ^0.9.1
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^1.10.0
+  freezed: ^0.11.5
+  lint: ^1.2.0
+  injectable_generator: ^1.0.4
+  auto_route_generator: ^0.6.8
+  json_serializable: ^3.4.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
+
+flutter_intl:
+
+  enabled: true
+
 flutter:
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -74,3 +90,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
