git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@
 .history
 .svn/
 
+# Generated code
+**.freezed.dart
+**.g.dart
+lib/generated/
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -33,6 +38,9 @@
 
 # Web related
 lib/generated_plugin_registrant.dart
+
+# apikey assets
+assets/secrets.json
 
 # Symbolication related
 app.*.symbols
