--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dio: ^3.0.10
   connectivity: ^0.4.9
   meta: ^1.1.8
+  transparent_image: ^1.0.0
 
 dev_dependencies:
   flutter_test:
